Ingress/simpledemo/VideosPod.yml
kind: Pod
apiVersion: v1
metadata:
  name: videos-app
  labels:
    app: videos
spec:
  containers:
    - name: videos-app
      image: hashicorp/http-echo
      args:
        - "-text=videos application"

---

kind: Service
apiVersion: v1
metadata:
  name: videos-service
spec:
  selector:
    app: videos
  ports:
    - port: 5678 # Default port for image
